[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/x_button.png" type="Texture" id=1]
[ext_resource path="res://scenes/house/interactable.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[sub_resource type="Animation" id=2]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/path = NodePath("popUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("popUp:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "float"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("popUp:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("popUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.666667 ) ]
}

[node name="interactable" type="Area2D"]
position = Vector2( 0, 150 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="popUp" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 0, -50 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="showHide" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )

[node name="float" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_interactable_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_interactable_body_exited"]
